FIX timeline bar overlap

--- a/css/main.css
+++ b/css/main.css
@@ -566,7 +566,7 @@ section.custom-timeline .timeline-bar {
   position: absolute; 
   background: #1e1e1e; 
   width: 3px; 
-  left: -3.6%; 
+  left: -3.5%; 
   z-index: 0; 
 } 
 section.custom-timeline .timeline-box { 
